@@ -1,4 +1,4 @@
-Nmap 7.96SVN ( https://nmap.org )
+Nmap 7.97 ( https://nmap.org )
 Usage: nmap [Scan Type(s)] [Options] {target specification}
 TARGET SPECIFICATION:
   Can pass hostnames, IP addresses, networks, etc.
