@@ -79,7 +79,7 @@
 /* Ncat information for output, etc. */
 #define NCAT_NAME "Ncat"
 #define NCAT_URL "https://nmap.org/ncat"
-#define NCAT_VERSION "7.96SVN"
+#define NCAT_VERSION "7.97"
 
 #ifndef __GNUC__
 #ifndef __attribute__
